--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -14,13 +14,16 @@ body{
     font-family: 'Poppins';
 }
 
+[hidden]{
+    display: none;
+}
+
 .button:hover{
     cursor: pointer;
     opacity: 0.85;
 }
 
 aside{
-    width: 15%;
     height: 100%;
     background-color: #363740;
     color: #F8FAFC;
@@ -32,24 +35,39 @@ aside{
 
     position: fixed;
     left: 0;
-    padding: 2rem 2rem; 
+    padding: 2rem 2rem 2rem; 
 
-}
-aside .container{
-    width: 80%;
-    height: 90%;
-   
+
+    /* biar ga bisa diselect */
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
-aside .container{
+aside, #menu-toggle, #logout{
+    transition: 0.5s ease;
+}
+
+#menu-toggle, #logout{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+}
+
+#logout{
+    bottom: 2rem;
 }
 
 aside #title{
     display: flex;
     align-items: center;
-    
+    justify-content: center;
 
     margin: 0;
+    
 }
 
 
@@ -68,10 +86,11 @@ aside #title span>*{
     margin: 0 2%;
 }
 
+aside #logo{
+    display: flex;
+    flex-direction: row;
 
-
-aside #menu-toggle{
-    margin: 0px 0px 0px 30px;
+    padding: 0 4rem 0 0;
 }
 
 aside #keluar:hover{
@@ -91,19 +110,25 @@ aside #keluar{
     background-color: rgba(36, 137, 244, 1);
 }
 
+#logout, #keluar{
+    position: absolute;
+    top: 90vh;
+}
 
 
 main{
-    max-width: 80vw;
+    max-width: 100vw;
     max-height: 100vh;
 
     position: absolute;
-    left: 20vw;
+    margin-left: 20vw;
 
     display: flex;
     flex-direction: column;
     color: #383027;
     padding: 1rem 1rem;
+
+    transition: margin-left 0.5s ease;
 }
 
 header{
@@ -113,6 +138,15 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+
+    /* biar ga bisa diselect */
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 
 }
 
@@ -125,7 +159,7 @@ header *{
     padding: 0;
 }
 
-header #title{
+header{
     font-weight: bold;
     font-size: 2rem;
 }
@@ -149,6 +183,6 @@ header #top-right img[alt="profile"]{
 
     margin: 0 1rem;
 }
-header{
+head{
 
 }
