--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -12,6 +12,10 @@ body{
 
     font-size: 20px;
     font-family: 'Poppins';
+
+    /* body variable */
+    --delay: 0.4s;
+    --timing: ease-out
 }
 
 [hidden]{
@@ -24,6 +28,7 @@ body{
 }
 
 aside{
+    width: 15%;
     height: 100%;
     background-color: #363740;
     color: #F8FAFC;
@@ -31,12 +36,11 @@ aside{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 
     position: fixed;
     left: 0;
-    padding: 2rem 2rem 2rem; 
 
+    transition: width var(--delay) var(--timing);
 
     /* biar ga bisa diselect */
     user-drag: none;
@@ -47,14 +51,11 @@ aside{
     -ms-user-select: none;
 }
 
-aside, #menu-toggle, #logout{
-    transition: 0.5s ease;
-}
-
 #menu-toggle, #logout{
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
+    transition: 0.5s ;
+}
+#menu-toggle, #logout{
+    height: 100%;
 }
 
 #logout{
@@ -66,16 +67,9 @@ aside #title{
     align-items: center;
     justify-content: center;
 
-    margin: 0;
-    
+    margin: 2rem 0rem;
+    width: 100%;
 }
-
-
-aside #title > *{
-    margin: 0px 5px;
-}
-
-
 
 aside #title h1{
     font-weight: bolder;
@@ -89,8 +83,6 @@ aside #title span>*{
 aside #logo{
     display: flex;
     flex-direction: row;
-
-    padding: 0 4rem 0 0;
 }
 
 aside #keluar:hover{
@@ -110,29 +102,65 @@ aside #keluar{
     background-color: rgba(36, 137, 244, 1);
 }
 
+aside nav{
+    width: 100%;
+}
+aside nav ul{
+    list-style: none;
+    padding: 0;
+}
+
+aside nav ul li{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0.5rem 0rem 0.5rem 1.5rem;
+    margin: 1rem 0rem;
+
+}
+
+aside nav ul li #pointer{
+    background-color: #9FA2B4;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 1.5%;
+    margin: 0;
+}
+
+aside nav ul li:hover{
+    background: #3F4049;
+}
+
+aside nav ul li *{
+    margin: 0 1rem;
+}
+
 #logout, #keluar{
     position: absolute;
     top: 90vh;
 }
 
-
 main{
+    width: 77%;
     max-width: 100vw;
     max-height: 100vh;
 
     position: absolute;
-    margin-left: 20vw;
+    margin-left: 18%;
 
     display: flex;
     flex-direction: column;
     color: #383027;
     padding: 1rem 1rem;
 
-    transition: margin-left 0.5s ease;
+    transition: 
+        width var(--delay) var(--timing),
+        margin-left var(--delay) var(--timing);
 }
 
 header{
-    width: 75vw;
     height: 100px;
     
     display: flex;
@@ -166,6 +194,8 @@ header{
 
 header .profile{
     margin: 0 0 0 1rem;
+    font-weight: normal;
+    font-size: 1.2rem;
 }
 
 header #top-right img[alt="profile"]{
