--- a/signup/styles.css
+++ b/signup/styles.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Poppins";
-
+  margin: 0;
   height: 100%;
   width: 100%;
   display: flex;
@@ -42,10 +42,10 @@ form {
   margin-bottom: 20%;
 }
 form label {
+  font-weight: bolder;
   font-size: 0.8rem;
   color: #94a3b8;
   font-family: "Poppins";
-  font-weight: 500;
 }
 
 form ::placeholder {
@@ -64,8 +64,9 @@ form i {
 }
 form input[type="text"],
 input[type="password"] {
+  padding-left: 10px;
   height: 1.5rem;
-  width: 19.5rem;
+  width: 19rem;
 }
 
 /* The switch - the box around the slider */
@@ -134,6 +135,7 @@ input:checked + .slider:before {
   margin-top: 0%;
 }
 form input[type="submit"] {
+  font-weight: bolder;
   font-family: "Poppins";
   width: 7.5rem;
   height: 1.5rem;
